examples/test/testpolicy1826.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1826
  namespace: namespace11
spec:
  podSelector:
    matchLabels:
      key5: value23
      key10: value36
      key15: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value47
      podSelector:
        matchLabels:
          key1: value1
